--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "@storybook/addon-interactions": "^8.0.8",
     "@storybook/addon-links": "^8.0.8",
     "@storybook/blocks": "^8.0.8",
+    "@storybook/manager-api": "^8.0.8",
     "@storybook/react": "^8.0.8",
     "@storybook/react-vite": "^8.0.8",
+    "@storybook/theming": "^8.0.8",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.2",
