--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint . --ext .ts,.tsx --ignore-path .gitignore --fix",
     "build": "tsc && vite build",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "test-watch": "vitest",
     "test:ui": "vitest --ui",
     "start": "storybook dev -p 6006",
@@ -61,6 +62,7 @@
     "@types/react-dom": "^18.2.23",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
+    "@vitest/coverage-istanbul": "^1.5.0",
     "@vitest/ui": "^1.5.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
