--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "declaration": true,
-    "types": ["@testing-library/jest-dom"]
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": [
     "dist",
     "node_modules",
