--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "author": "JulienGabard <juliengabard.pros@gmail.com>",
   "description": "Library components react, hooks and helpers",
   "license": "MIT",
-  "keywords": ["React", "Hooks", "Helpers", "TypeScript"],
+  "keywords": [
+    "React",
+    "Hooks",
+    "Helpers",
+    "TypeScript"
+  ],
   "scripts": {
     "format": "prettier --write --parser typescript '**/*.{ts,tsx}'",
     "lint": "eslint . --ext .ts,.tsx --ignore-path .gitignore --fix",
     "build": "tsc && vite build",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "test-watch": "vitest",
     "test:ui": "vitest --ui",
     "start": "storybook dev -p 6006",
@@ -41,20 +47,23 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.0.5",
-    "@storybook/addon-interactions": "^8.0.5",
-    "@storybook/addon-links": "^8.0.5",
-    "@storybook/addon-onboarding": "^8.0.5",
-    "@storybook/blocks": "^8.0.5",
-    "@storybook/react": "^8.0.5",
-    "@storybook/react-vite": "^8.0.5",
+    "@storybook/addon-essentials": "^8.0.8",
+    "@storybook/addon-interactions": "^8.0.8",
+    "@storybook/addon-links": "^8.0.8",
+    "@storybook/blocks": "^8.0.8",
+    "@storybook/manager-api": "^8.0.8",
+    "@storybook/react": "^8.0.8",
+    "@storybook/react-vite": "^8.0.8",
     "@storybook/testing-library": "^0.2.2",
+    "@storybook/theming": "^8.0.8",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.2",
-    "@types/react": "^18.2.73",
-    "@types/react-dom": "^18.2.23",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
+    "@testing-library/react": "^15.0.2",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "@vitest/coverage-istanbul": "^1.5.0",
+    "@vitest/ui": "^1.5.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -67,12 +76,12 @@
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^8.0.5",
+    "storybook": "^8.0.8",
     "styled-components": "^6.1.8",
-    "typescript": "^5.4.3",
-    "vite": "^5.2.7",
-    "vite-plugin-dts": "^3.8.1",
-    "vitest": "^1.4.0"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.10",
+    "vite-plugin-dts": "^3.8.3",
+    "vitest": "^1.5.0"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
