--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "format": "prettier --write --parser typescript '**/*.{ts,tsx}'",
-    "lint": "eslint . --ext .ts,.tsx --ignore-path .gitignore --fix",
+    "lint": "eslint . --fix",
     "build": "tsc && vite build",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.1.1",
     "@storybook/addon-essentials": "^8.0.8",
     "@storybook/addon-interactions": "^8.0.8",
     "@storybook/addon-links": "^8.0.8",
@@ -60,16 +61,11 @@
     "@testing-library/react": "^15.0.2",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
     "@vitest/coverage-istanbul": "^1.5.0",
     "@vitest/ui": "^1.5.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.8.0",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
@@ -79,6 +75,7 @@
     "storybook": "^8.0.8",
     "styled-components": "^6.1.8",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.0",
     "vite": "^5.2.10",
     "vite-plugin-dts": "^3.8.3",
     "vitest": "^1.5.0"
