--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,8 @@
     "dist",
     "node_modules",
     "coverage",
+    ".github",
+    ".husky",
     "src/**/__docs__",
     "src/**/__test__"
   ]
