--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -8,9 +8,9 @@
   ],
   "exclude": [
     "node_modules",
+    "coverage",
+    "dist",
     ".github",
     ".husky",
-    "coverage",
-    "dist"
   ]
 }
