3 feature migration to eslint 9 (#5)
* Upgrade eslint to v9.1.0, delete no used packages, add new packages for typescript lint and config new eslint plat TODO fix include or exclude tsconfig for linter

* Add new file for include and exclude eslint ts

* upgrade dev dependencies

* Edit exclude tsconfig

* Edit include tsconfig.eslint.json

* Upgrade package

* Add module for type defaultTheme and finish config eslint 9

* Add branch beta for test push and pull_request

---------

Co-authored-by: JulienGabard <julien.gabard@octaave.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
   "exclude": [
     "dist",
     "node_modules",
+    "coverage",
+    ".github",
+    ".husky",
     "src/**/__docs__",
     "src/**/__test__"
   ]
