--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "format": "prettier --write --parser typescript '**/*.{ts,tsx}'",
-    "lint": "eslint . --ext .ts,.tsx --ignore-path .gitignore --fix",
+    "lint": "eslint . --fix",
     "build": "tsc && vite build",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
@@ -47,41 +47,38 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.0.8",
-    "@storybook/addon-interactions": "^8.0.8",
-    "@storybook/addon-links": "^8.0.8",
-    "@storybook/blocks": "^8.0.8",
-    "@storybook/manager-api": "^8.0.8",
-    "@storybook/react": "^8.0.8",
-    "@storybook/react-vite": "^8.0.8",
+    "@eslint/js": "^9.1.1",
+    "@storybook/addon-essentials": "^8.0.9",
+    "@storybook/addon-interactions": "^8.0.9",
+    "@storybook/addon-links": "^8.0.9",
+    "@storybook/blocks": "^8.0.9",
+    "@storybook/manager-api": "^8.0.9",
+    "@storybook/react": "^8.0.9",
+    "@storybook/react-vite": "^8.0.9",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/theming": "^8.0.8",
+    "@storybook/theming": "^8.0.9",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.2",
+    "@testing-library/react": "^15.0.4",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
-    "@vitest/coverage-istanbul": "^1.5.0",
-    "@vitest/ui": "^1.5.0",
-    "eslint": "^8.57.0",
+    "@vitest/coverage-istanbul": "^1.5.1",
+    "@vitest/ui": "^1.5.1",
+    "eslint": "^9.1.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.8.0",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^8.0.8",
+    "storybook": "^8.0.9",
     "styled-components": "^6.1.8",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.1",
     "vite": "^5.2.10",
-    "vite-plugin-dts": "^3.8.3",
-    "vitest": "^1.5.0"
+    "vite-plugin-dts": "^3.9.0",
+    "vitest": "^1.5.1"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
