--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "bugs": {
     "url": "https://github.com/julien-gabard/novakit/issues"
   },
-  "homepage": "",
+  "homepage": "https://novakit.netlify.app",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@julien-gabard"
   },
