--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@julien-gabard/novakit",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "JulienGabard <juliengabard.pros@gmail.com>",
   "description": "Library components react, hooks and helpers",
   "license": "MIT",
@@ -35,7 +35,7 @@
   "bugs": {
     "url": "https://github.com/julien-gabard/novakit/issues"
   },
-  "homepage": "",
+  "homepage": "https://novakit.netlify.app",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@julien-gabard"
   },
@@ -46,39 +46,42 @@
       "npm run test"
     ]
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "devDependencies": {
-    "@eslint/js": "^9.1.1",
-    "@storybook/addon-essentials": "^8.0.9",
-    "@storybook/addon-interactions": "^8.0.9",
-    "@storybook/addon-links": "^8.0.9",
-    "@storybook/blocks": "^8.0.9",
-    "@storybook/manager-api": "^8.0.9",
-    "@storybook/react": "^8.0.9",
-    "@storybook/react-vite": "^8.0.9",
+    "@eslint/js": "^9.2.0",
+    "@storybook/addon-essentials": "^8.0.10",
+    "@storybook/addon-interactions": "^8.0.10",
+    "@storybook/addon-links": "^8.0.10",
+    "@storybook/blocks": "^8.0.10",
+    "@storybook/manager-api": "^8.0.10",
+    "@storybook/react": "^8.0.10",
+    "@storybook/react-vite": "^8.0.10",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/theming": "^8.0.9",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.4",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
-    "@vitest/coverage-istanbul": "^1.5.1",
-    "@vitest/ui": "^1.5.1",
-    "eslint": "^9.1.1",
+    "@storybook/theming": "^8.0.10",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "@vitest/coverage-istanbul": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
+    "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "storybook": "^8.0.9",
-    "styled-components": "^6.1.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "storybook": "^8.0.10",
+    "styled-components": "^6.1.10",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.7.1",
-    "vite": "^5.2.10",
-    "vite-plugin-dts": "^3.9.0",
-    "vitest": "^1.5.1"
+    "typescript-eslint": "^7.8.0",
+    "vite": "^5.2.11",
+    "vite-plugin-dts": "^3.9.1",
+    "vitest": "^1.6.0"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
