--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     ]
   },
   "resolutions": {
-    "styled-components": "^5"
+    "styled-components": "^5",
+    "eslint": "^8.56.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
