Delete resolutions eslint

--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     ]
   },
   "resolutions": {
-    "styled-components": "^5",
-    "eslint": "^8.56.0"
+    "styled-components": "^5"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
