Creat folder for structure Atomic design

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "noFallthroughCasesInSwitch": true,
     "declaration": true,
   },
-  "include": ["src/**/*"],
+  "include": ["src"],
   "exclude": [
     "dist",
     "node_modules",
